# sphinx_packet_construction

./: .gitignore  README.md
backend/: Cargo.toml  run.sh
backend/src/: api.rs  crypto.rs  lib.rs  main.rs  types.rs  utils.rs  visualizer.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: ErrorModal.jsx  FinalPacket.jsx  FlowVisualization.jsx  Header.jsx  HopEditor.jsx  InputPanel.jsx  LayerVisualization.jsx  SharedSecrets.jsx  VisualizationPanel.jsx
frontend/src/styles/: index.css
test/: onion_check.sh
