[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
hmac = "0.12.1"
serde_json = "1.0.145"
sha2 = "0.10.9"
hex = "0.4.3"
chacha20 = "0.9.1"
secp256k1 = { version = "0.31.1", features = ["global-context"]}
serde = {version="1.0.228",features=["derive"]}

# Web server dependencies
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }

